# dynamite

./: .gitignore  Cargo.toml  README.md  README.tpl  justfile
dynamite_macros/: Cargo.toml
dynamite_macros/src/: lib.rs
examples/: hello_world.rs  python.rs
language_adapters/python/: Cargo.toml  README.md
language_adapters/python/src/: lib.rs
src/: allocation.rs  language_adapter.rs  lib.rs  script_api.rs  stockpile.rs  types.rs
src/script_api/: impls.rs
