[package]
name = "dynamite"
version = "0.0.1"
authors = ["Zicklag <zicklag@katharostech.com>"]
edition = "2018"

[workspace]
members = [
    ".",
    "language_adapters/python"
]

[dependencies]
safer-ffi = { version = "0.0.5", features = ["proc_macros"] }
serde = { version = "1.0.117", features = ["derive"] }
dlopen = "0.1.8"
dlopen_derive = "0.1.4"
serde_cbor = "0.11.1"
