[package]
name = "dynamite"
version = "0.0.1"
authors = ["Zicklag <zicklag@katharostech.com>"]
edition = "2018"
license-file = "LICENSE.md"
description = "A language-agnostic scripting solution for Rust programs"
repository = "https://github.com/katharostech/dynamite"
documentation = "https://docs.rs/dynamite"
readme = "README.md"
keywords = ["scripting", "languages", "dynamic"]
categories = [
    "development-tools::ffi",
]

exclude = [
    "language_adapters"
]

[features]
default = []

[workspace]
members = [
    ".",
    "dynamite_macros",
    "language_adapters/python"
]

[dependencies]
dynamite_macros = { version = "0.0.1", path = "./dynamite_macros" }
once_cell = { version = "1.7.0" }

safer-ffi = { version = "0.0.5", features = ["proc_macros"] }
serde = { version = "1.0.117", features = ["derive"] }
dlopen = "0.1.8"
dlopen_derive = "0.1.4"
serde_cbor = "0.11.1"
thiserror = "1.0.24"
inventory = "0.1.10"
