[package]
name = "dynamite_python"
version = "0.1.0"
authors = ["Zicklag <zicklag@katharostech.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
dynamite = { path = "../../../dynamite", features = ["derive"] }
safer-ffi = { version = "0.0.5", features = ["proc_macros"] }

rustpython-vm = { git = "https://github.com/RustPython/RustPython.git", rev = "3ce476c13d4daa3366e012a96a5e52e271ed2b29" }
